# Cryptonian_Omicode

./: .env  .gitignore  README.md  app.py  requirements.txt
back_api/: main.py
backend/: auth.py
backend/games/: artifact_assembler.py  console.py  map_quiz.py  minesweeper.py  monument_scanner.py  nft.py  timeline_tactician.py
backend/lessons/: geography.py  history.py  quiz_handler.py  web3.py
bot/: chatbot.py
content/: introduction_to_blockchain.md
contracts/: a.py  aa.py  aaa.py  aaaa.py  aptos_interact.py  pyproject.toml
cryptonian_contract/: Move.toml
cryptonian_contract/sources/: CryptonianGames.move
database/: db.py
frontend/: home.py
frontend/user/: chatbot.py  dashboard.py  game.py  leaderboard.py  lesson.py  lesson_styles.py  marketplace.py
